package com.polishbank.bank_a.domain.user;

public enum UserRole {
    CUSTOMER, ADMIN, PARENT, JUNIOR
}